plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
    id 'org.beryx.jlink' version '2.24.1'
}

group 'fr.telecomnancy'
version '1.0-SNAPSHOT'

repositories {

    maven {
        url 'https://repo.osgeo.org/repository/release/'
    }

    mavenCentral()
    mavenLocal()

}

ext {
    junitVersion = '5.8.2'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    
    mainModule = 'fr.telecomnancy.anglais'
    mainClass = 'fr.telecomnancy.anglais.Main'

    run {
        jvmArgs '--add-exports', 'javafx.base/com.sun.javafx.event=org.controlsfx.controls'
    }

}

javafx {
    version = '17.0.1'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.web', 'javafx.base']
}

dependencies {
    
    implementation('org.controlsfx:controlsfx:11.1.1')

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    implementation group: 'org.geotools', name: 'gt-shapefile', version: '21.2'
    implementation group: 'org.geotools', name: 'gt-main', version: '21.2'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'

    implementation 'org.jsoup:jsoup:1.14.3'

    implementation 'com.jfoenix:jfoenix:9.0.10'

}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}